# FastAPI-fastkit

./: .gitignore  .pre-commit-config.yaml  .yamllint  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  env.example  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  changelog-ci-config.yaml  depandabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  default_issue_template.md  feature_request.md  template_request.md
.github/workflows/: build-docs.yml  changelog.yml  distribute.yml  release-drafter.yml  release.yml  template-inspection.yml  template-pr-inspection.yml  template-security-scan.yml  test.yml  translate-docs.yml
changelog/: index.html
contributing/code-guidelines/: index.html
contributing/development-setup/: index.html
contributing/template-creation-guide/: index.html
contributing/translation-guide/: index.html
de/: index.html
de/changelog/: index.html
de/contributing/code-guidelines/: index.html
de/contributing/development-setup/: index.html
de/contributing/template-creation-guide/: index.html
de/contributing/translation-guide/: index.html
de/reference/faq/: index.html
de/reference/preset-feature-matrix/: index.html
de/reference/template-quality-assurance/: index.html
de/reference/translation-status/: index.html
de/tutorial/async-crud-api/: index.html
de/tutorial/basic-api-server/: index.html
de/tutorial/custom-response-handling/: index.html
de/tutorial/database-integration/: index.html
docs/: index.md
docs/contributing/: code-guidelines.md  development-setup.md  template-creation-guide.md
docs/css/: termynal.css
docs/de/: index.md
docs/en/: index.md
docs/es/: index.md
docs/fr/: changelog.md  index.md
docs/ja/: index.md
docs/ko/: index.md
docs/reference/: faq.md  template-quality-assurance.md
docs/tutorial/: async-crud-api.md  basic-api-server.md  custom-response-handling.md  first-project.md  getting-started.md  mcp-integration.md
docs/user-guide/: cli-reference.md  creating-projects.md  installation.md  quick-start.md  using-templates.md
docs/zh/: index.md
es/: index.html
es/changelog/: index.html
fastapi-project-template/: PROJECT_README_TEMPLATE.md  README.md
fastapi-project-template/fastapi-default/: .env.test-tpl  README.md-tpl  main.py-tpl  requirements.txt-tpl  setup.cfg-tpl  setup.py-tpl
fr/: index.html
fr/changelog/: index.html
fr/css/: termynal.css
ja/: index.html
ja/changelog/: index.html
js/: custom.js
ko/: index.html
ko/changelog/: index.html
ko/img/: FastAPI-fastkit_logo.ai
reference/faq/: index.html
reference/preset-feature-matrix/: index.html
reference/template-quality-assurance/: index.html
reference/translation-status/: index.html
scripts/: coverage-report.sh  coverage.sh  fetch-and-test.sh  format.sh  inspect-changed-templates.py  inspect-templates.py  lint.sh  setup-i18n-structure.sh  translate.py  translation_config.json  update_nav_translations.py
search/: search_index.json
src/fastapi_fastkit/: __init__.py  __main__.py  backend.py  cli.py
tests/: conftest.py  test_core.py  test_utils.py
tests/test_backends/: test_configure.py  test_console_sizing.py  test_inspector.py  test_interactive_config_builder.py  test_interactive_prompts.py  test_interactive_selectors.py  test_interactive_validators.py  test_main.py  test_package_managers.py  test_preset_layout.py  test_project_builder_config_generator.py  test_project_builder_dependency_collector.py  test_transducer.py
tests/test_cli_operations/: test_base_cli.py  test_cli.py  test_cli_extended.py  test_cli_interactive_integration.py
tests/test_rich/: test_rich.py
tests/test_templates/: template_configs.yaml  test_all_templates.py  test_config_based_templates.py  test_domain_starter_e2e.py  test_fastapi-async-crud.py  test_fastapi-customized-response.py  test_fastapi-default.py  test_fastapi-dockerized.py
tutorial/async-crud-api/: index.html
tutorial/basic-api-server/: index.html
tutorial/custom-response-handling/: index.html
tutorial/database-integration/: index.html
tutorial/docker-deployment/: index.html
tutorial/domain-starter/: index.html
tutorial/first-project/: index.html
tutorial/getting-started/: index.html
tutorial/mcp-integration/: index.html
user-guide/adding-routes/: index.html
user-guide/choosing-a-starter/: index.html
user-guide/cli-reference/: index.html
user-guide/creating-projects/: index.html
user-guide/installation/: index.html
user-guide/quick-start/: index.html
user-guide/using-templates/: index.html
zh/: index.html
zh/changelog/: index.html
(+491 files in other folders)
