[project]
name = "FastAPI-fastkit"
version = "0.1.0"
description = "Fast, easy-to-use starter kit for new users of Python and FastAPI"
authors = [
    {name = "bnbong", email = "bbbong9@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.2",
    "pytest>=8.3.3",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.12.0",
    "isort>=5.13.2",
    "fastapi-cli>=0.0.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
fastkit = "fastapi_fastkit.cli:fastkit_cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
version = { source = "file", path = "src/fastapi_fastkit/__init__.py" }
distribution = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi_fastkit.cli"
disable_error_code = ["func-returns-value"]

[[tool.mypy.overrides]]
module = "fastapi_fastkit.core"
ignore_missing_imports = true
check_untyped_defs = false
