[project]
name = "FastAPI-fastkit"
dynamic = ["version"]
description = "Fast, easy-to-use starter kit for new users of Python and FastAPI"
authors = [
    {name = "bnbong", email = "bbbong9@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/bnbong/FastAPI-kit"
Repository = "https://github.com/bnbong/FastAPI-kit"
Documentation = "https://bnbong.github.io/FastAPI-fastkit/"
Changelog = "https://bnbong.github.io/FastAPI-fastkit/changelog/"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.2.1",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "mypy>=1.12.0",
    "isort>=5.13.2",
]

[project.scripts]
fastkit = "fastapi_fastkit.cli:fastkit_cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi_fastkit.cli"
disable_error_code = ["func-returns-value"]

[[tool.mypy.overrides]]
module = "fastapi_fastkit.core"
ignore_missing_imports = true
check_untyped_defs = false



[tool.pdm]
version = { source = "file", path = "src/fastapi_fastkit/__init__.py" }
distribution = true

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mdx-include>=1.4.2",
    "mkdocs-static-i18n>=1.3.0",
    "pyyaml>=6.0.3",
    "types-PyYAML>=6.0.12.20250915",
]
translation = [
    "openai>=2.8.1",
    "anthropic>=0.74.0",
]

[tool.coverage.run]
source = ["src/fastapi_fastkit"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/fastapi_project_template/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
